odin/uv/uv.odin

package uv
import "core:c"

foreign import libuv {
			"libuv.a",
}

signal_cb :: proc (handle: ^Signal, signum: c.int) ---


io_cb :: proc(loop: Loop,w: ^UvIo, events :c.uint) ---


}
uv_malloc_func :: proc(size: c.size_t) ---
uv_realloc_func :: proc(ptr: rawptr,size: c.size_t) ---
uv_calloc_func ::proc( count: c.size_t, size:c.size_t) ---
uv_free_func :: proc(ptr:rawptr) ---
typedef void (*uv_fs_event_cb)(handle: ^FsEvent,
                               const char* filename,
                               int events,
                               int status);


                               
                               typedef void (*uv_alloc_cb)(uv_handle_t* handle,
                                                           size_t suggested_size,
                                                           uv_buf_t* buf);
                               typedef void (*uv_read_cb)(uv_stream_t* stream,
                                                          ssize_t nread,
                                                          const uv_buf_t* buf);
                               typedef void (*uv_write_cb)(uv_write_t* req, int status);
                               typedef void (*uv_connect_cb)(uv_connect_t* req, int status);
                               typedef void (*uv_shutdown_cb)(uv_shutdown_t* req, int status);
                               typedef void (*uv_connection_cb)(uv_stream_t* server, int status);
                               typedef void (*uv_close_cb)(uv_handle_t* handle);
                               typedef void (*uv_poll_cb)( handle: Poll, int status, int events);
                               typedef void (*uv_timer_cb)(handle: Timer);
                               typedef void (*uv_async_cb)(uv_async_t* handle);
                               typedef void (*uv_prepare_cb)(uv_prepare_t* handle);
                               typedef void (*uv_check_cb)(uv_check_t* handle);
                               typedef void (*uv_idle_cb)(uv_idle_t* handle);
                               uv_exit_cb ::proc ( options: ^ProcessOptions, int64_t exit_status, int term_signal) ---
                               typedef void (*uv_walk_cb)(uv_handle_t* handle, arg: rawptr);
                               typedef void (*uv_fs_cb)(uv_fs_t* req);
                               typedef void (*uv_work_cb)(uv_work_t* req);
                               typedef void (*uv_after_work_cb)(uv_work_t* req, int status);
                               typedef void (*uv_getaddrinfo_cb)(uv_getaddrinfo_t* req,
                                                                 int status,
                                                                 struct addrinfo* res);
                               typedef void (*uv_getnameinfo_cb)(uv_getnameinfo_t* req,
                                                                 int status,
                                                                 const char* hostname,
                                                                 const char* service);
                               typedef void (*uv_random_cb)(uv_random_t* req,
                                                            int status,
                                                            void* buf,
                                                            size_t buflen);
foreign libuv {
    
uv_library_shutdown ::proc(v) ---

UV_EXTERN int uv_replace_allocator :: proc(uv_malloc_func malloc_func,
                                   uv_realloc_func realloc_func,
                                   uv_calloc_func calloc_func,
                                   uv_free_func free_func) -> c.int ---
       @(link_name="uv_default_loop")    default_loop ::proc () -> Loop ---
      @(link_name="uv_loop_init")   loop_init ::proc(loop :Loop) -> c.int ---
     @(link_name="uv_loop_close") loop_close ::proc (loop: Loop) -> c.int ---
/*
 * NOTE:
 *  This function is DEPRECATED, users should
 *  allocate the loop manually and use uv_loop_init instead.
 */
 @(link_name="uv_loop_new") loop_new ::proc () -> Loop ---
/*
 * NOTE:
 *  This function is DEPRECATED. Users should use
 *  uv_loop_close and free the memory manually instead.
 */
     @(link_name="uv_loop_delete") loop_delete :: proc(loop: Loop)  ---
     @(link_name="uv_loop_size") loop_size ::proc() -> c.size_t ---
     @(link_name="uv_loop_alive") loop_alive::proc (loop: Loop) -> c.int ---
     @(link_name="uv_loop_configure") loop_configure :: proc (loop: Loop, option: LoopOption) -> c.int ---
     @(link_name="uv_loop_fork") uv_loop_fork :: proc(loop: Loop)-> c.int ---

     @(link_name="uv_run") run  ::proc(loop: Loop,  mode :RunMode)-> c.int ---
      @(link_name="uv_stop")  stop :: proc(loop : Loop) ---

     @(link_name="uv_ref")ref ::proc(handle :Handle) ---
 @(link_name="uv_ref") unref :: proc(handle: Handle) ---    
     @(link_name="uv_has_ref")   as_ref :: proc(handle :Handle) -> c.int ---

 @(link_name="uv_update_time") update_time :: proc(loop: Loop) ---
  @(link_name="uv_now")  now :: proc(loop: Loop)-> c.uint64_t ---

  @(link_name="uv_backend_fd")  backend_fd ::proc (loop: Loop) -> c.int ---
  @(link_name="uv_backend_timeout")   uv_backend_timeout :: proc(loop: Loop) -> c.int ---
    @(link_name="uv_version") version ::proc() -> c.uint ---
    @(link_name="uv_version_string") version_string ::proc() -> cstring ---
    // @(link_name="uv_library_shutdown") library_shutdown :: proc() ---
    // @(link_name="uv_library_shutdown") library_shutdown :: proc() -> Loop ---
    
      @(link_name="uv_loop_get_data") loop_get_data :: proc( loop: Loop) -> rawptr ---
     @(link_name="uv_loop_set_data") loop_set_data :: proc(loopY: Loop,  data: rawptr);
    @(link_name="uv_signal_init")  signal_init :: proc(loop: Loop,handle : ^Signal ) -> c.int ---
      @(link_name="uv_signal_start") signal_start :: proc( handle :^Signal ,
                                   signal_cb: usignal_cb,
                                  signum: c.int) -> c.int ---
      @(link_name="uv_signal_start_oneshot") signal_start_oneshot:: proc( handle: ^Signal,
                                           signal_cb: signal_cb,
                                          signum: c.int) -> c.int ---
    @(link_name="uv_signal_stop")   signal_stop :: proc(handle: ^Signal) -> c.int --- 
    
    @(link_name="uv_loadavg")   loadavg :: proc( avg: [3]c.double) ---
    
    @(link_name="uv_if_indextoname") if_indextoname:: proc(ifindex: c.uint,
                                    buffer: cstring,
                                     size: c.size_t) -> c.int ---
  @(link_name="uv_if_indextoiid") if_indextoiid ::proc(ifindex: c.uint,
                                   buffer: cstring,
                                    size: c.size_t) -> c.int ---
    
      @(link_name="uv_exepath") exepath::proc( buffer: cstring, size :c.size_t) -> c.int---
    
     @(link_name="uv_cwd") cwd :: proc( buffer: string, size: c.size_t) -> c.int ---
    
     @(link_name="uv_chdir") chdir ::proc(dir: cstring) -> c.int ---
    
   @(link_name="uv_get_free_memory")  get_free_memory::proc()-> c.uint64_t ---
   @(link_name="uv_get_total_memory") get_total_memory::proc() -> c.uint64_t ---
    @(link_name="uv_get_constrained_memory")  get_constrained_memory ::proc() -> c.uint64_t ---
     @(link_name="uv_get_available_memory") get_available_memory:: proc() -> c.uint64_t ---
    
     @(link_name="uv_clock_gettime") clock_gettime :: proc(clock_id: ClockId, ts: ^Timespec)-> c.int ---
      @(link_name="uv_hrtime") hrtime ::proc() -> c.uint64_t ---
     @(link_name="uv_sleep")  sleep ::proc( msec: c.uint) ---
   
    
    //  int uv_mutex_init(uv_mutex_t* handle);
    //  int uv_mutex_init_recursive(uv_mutex_t* handle);
    //  void uv_mutex_destroy(uv_mutex_t* handle);
    //  void uv_mutex_lock(uv_mutex_t* handle);
    //  int uv_mutex_trylock(uv_mutex_t* handle);
    //  void uv_mutex_unlock(uv_mutex_t* handle);
    
    //  int uv_rwlock_init(uv_rwlock_t* rwlock);
    //  void uv_rwlock_destroy(uv_rwlock_t* rwlock);
    //  void uv_rwlock_rdlock(uv_rwlock_t* rwlock);
    //  int uv_rwlock_tryrdlock(uv_rwlock_t* rwlock);
    //  void uv_rwlock_rdunlock(uv_rwlock_t* rwlock);
    //  void uv_rwlock_wrlock(uv_rwlock_t* rwlock);
    //  int uv_rwlock_trywrlock(uv_rwlock_t* rwlock);
    //  void uv_rwlock_wrunlock(uv_rwlock_t* rwlock);
    
    //  int uv_sem_init(uv_sem_t* sem, unsigned int value);
    //  void uv_sem_destroy(uv_sem_t* sem);
    //  void uv_sem_post(uv_sem_t* sem);
    //  void uv_sem_wait(uv_sem_t* sem);
    //  int uv_sem_trywait(uv_sem_t* sem);
    
    //  int uv_cond_init(uv_cond_t* cond);
    //  void uv_cond_destroy(uv_cond_t* cond);
    //  void uv_cond_signal(uv_cond_t* cond);
    //  void uv_cond_broadcast(uv_cond_t* cond);
    
    //  int uv_barrier_init(uv_barrier_t* barrier, unsigned int count);
    //  void uv_barrier_destroy(uv_barrier_t* barrier);
    //  int uv_barrier_wait(uv_barrier_t* barrier);
    
    //  void uv_cond_wait(uv_cond_t* cond, uv_mutex_t* mutex);
    //  int uv_cond_timedwait(uv_cond_t* cond,
    //                                 uv_mutex_t* mutex,
    //                                 uint64_t timeout);
    
    //  void uv_once(uv_once_t* guard, void (*callback)(void));
    
    //  int uv_key_create(uv_key_t* key);
    //  void uv_key_delete(uv_key_t* key);
    //  void* uv_key_get(uv_key_t* key);
    //  void uv_key_set(uv_key_t* key, void* value);
    
    //  int uv_gettimeofday(uv_timeval64_t* tv);
    
    UV_EXTERN int uv_async_init(loop: Loop,
                                async: Async,
                                uv_async_cb async_cb);
    UV_EXTERN int uv_async_send(async: Async);

    UV_EXTERN int uv_timer_init(loop: Loop, handle: Timer);
    UV_EXTERN int uv_timer_start(handle: Timer,
                                 uv_timer_cb cb,
                                 uint64_t timeout,
                                 uint64_t repeat);
    UV_EXTERN int uv_timer_stop(handle: Timer);
    UV_EXTERN int uv_timer_again(handle: Timer);
    UV_EXTERN void uv_timer_set_repeat(handle: Timer, uint64_t repeat);
    UV_EXTERN uint64_t uv_timer_get_repeat(const handle: Timer);
    UV_EXTERN uint64_t uv_timer_get_due_in(const handle: Timer);
    
    UV_EXTERN int uv_getaddrinfo(loop: Loop,
                                 uv_getaddrinfo_t* req,
                                 uv_getaddrinfo_cb getaddrinfo_cb,
                                 const char* node,
                                 const char* service,
                                 const struct addrinfo* hints);
    UV_EXTERN void uv_freeaddrinfo(struct addrinfo* ai);

    UV_EXTERN int uv_getnameinfo(loop: Loop,
                                 uv_getnameinfo_t* req,
                                 uv_getnameinfo_cb getnameinfo_cb,
                                 const struct sockaddr* addr,
                                 flags:c.int);
    UV_EXTERN int uv_spawn(loop: Loop,
                          handle: Process,
                           const uv_process_options_t* options);
    UV_EXTERN int uv_process_kill(uv_process_t*, int signum);
    UV_EXTERN int uv_kill(int pid, int signum);
    UV_EXTERN uv_pid_t uv_process_get_pid(const uv_process_t*);
